--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "browserify": "^13.0.0",
+    "jsdom": "^8.1.0",
     "koa": "^2.0.0-alpha.3",
-    "lodash": "^4.5.0"
+    "koa-router": "^7.0.1",
+    "lodash": "^4.5.0",
+    "request": "^2.69.0"
   },
   "devDependencies": {
     "typescript": "^1.8.0"
