--- a/scraper/tsconfig.json
+++ b/scraper/tsconfig.json
@@ -5,10 +5,10 @@
 		"removeComments": true,
 		"outDir": "build/Release/",
 		"sourceMap": true,
-		"target": "es6"
+		"target": "es5"
 	},
 	"files": [
-		"src/app.ts",
+		"src/schedule-scraper.ts",
 		"typings/main.d.ts"
 		/*"typings/browser.d.ts"*/
 	]
