--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-    "files.exclude": {
-        "**/.git": true,
-        "**/.DS_Store": true,
-        "src/**/*.js": true,
-        "test/**/*.js": true,
-        "build/": true
-    }
+	"files.exclude": {
+		"**/.git": true,
+		"**/.DS_Store": true,
+		"src/**/*.js": true,
+		"test/**/*.js": true,
+		"build/": true
+	},
+	"editor.detectIndentation": false,
+	"editor.insertSpaces": false
 }
