--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "dependencies": {
     "browserify": "^13.0.0",
+    "guid": "0.0.12",
     "jsdom": "^8.1.0",
     "koa": "^2.0.0-alpha.3",
+    "koa-bodyparser": "^3.0.0",
     "koa-router": "^7.0.1",
     "lodash": "^4.6.1",
+    "mssql": "^3.2.1",
     "q": "^1.4.1",
     "request": "^2.69.0"
   },
@@ -18,7 +21,7 @@
   "scripts": {
     "test": "mocha"
   },
-  "repository": {\
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/trevorsg/thebroomstack.git"
   },
