--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "browserify": "^13.0.0",
     "guid": "0.0.12",
     "jsdom": "^8.1.0",
+    "jsonwebtoken": "^6.2.0",
     "koa": "^2.0.0-alpha.3",
     "koa-bodyparser": "^3.0.0",
     "koa-router": "^7.0.1",
     "lodash": "^4.6.1",
     "mssql": "^3.2.1",
+    "node-rsa": "^0.3.2",
     "q": "^1.4.1",
     "request": "^2.69.0"
   },
