--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "description": "The Broom Stack is software to manage a curling club, including a back end and web interface.",
   "main": "index.js",
   "dependencies": {
+    "@types/jsonwebtoken": "^5.7.26-alpha",
+    "@types/koa-bodyparser": "^3.0.16-alpha",
+    "@types/koa-router": "^7.0.16-alpha",
+    "@types/lodash": "^4.0.25-alpha",
+    "@types/mssql": "^3.1.26-alpha",
+    "@types/node": "^4.0.26-alpha",
+    "@types/q": "0.0.25-alpha",
     "browserify": "^13.0.0",
     "guid": "0.0.12",
     "jsdom": "^8.1.0",
@@ -16,9 +23,6 @@
     "node-rsa": "^0.3.2",
     "q": "^1.4.1",
     "request": "^2.69.0"
-  },
-  "devDependencies": {
-    "typescript": "^1.8.0"
   },
   "scripts": {
     "test": "mocha"
@@ -35,5 +39,8 @@
   "bugs": {
     "url": "https://github.com/trevorsg/thebroomstack/issues"
   },
-  "homepage": "https://github.com/trevorsg/thebroomstack#readme"
+  "homepage": "https://github.com/trevorsg/thebroomstack#readme",
+  "devDependencies": {
+    "typescript": "^2.0.0-dev.20160704"
+  }
 }
