--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The Broom Stack is software to manage a curling club, including a back end and web interface.",
   "main": "index.js",
   "dependencies": {
+    "@types/handlebars": "^3.0.27",
     "@types/jsonwebtoken": "^5.7.26-alpha",
     "@types/koa-bodyparser": "^3.0.16-alpha",
     "@types/koa-router": "^7.0.16-alpha",
@@ -13,6 +14,7 @@
     "@types/q": "0.0.25-alpha",
     "browserify": "^13.0.0",
     "guid": "0.0.12",
+    "handlebars": "^4.0.5",
     "jsdom": "^8.1.0",
     "jsonwebtoken": "^6.2.0",
     "koa": "^2.0.0-alpha.3",
