--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -15,6 +15,7 @@
 	"files": [
 		"app.ts",
 		"controller/PersonController.ts",
-		"controller/HomeController.ts"
+		"controller/HomeController.ts",
+		"controller/StaticController.ts"
 	]
 }
