Update schedule scraper.

--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "@types/handlebars": "^3.0.27",
+    "@types/jsdom": "^2.0.28",
     "@types/jsonwebtoken": "^5.7.26-alpha",
     "@types/koa-bodyparser": "^3.0.16-alpha",
     "@types/koa-router": "^7.0.16-alpha",
     "@types/lodash": "^4.0.25-alpha",
     "@types/mssql": "^3.1.26-alpha",
-    "@types/node": "^4.0.26-alpha",
+    "@types/node": "^4.0.30",
     "@types/q": "0.0.25-alpha",
+    "@types/request": "0.0.30",
     "@types/webpack": "^1.12.31",
     "autoprefixer": "^6.4.0",
     "awesome-typescript-loader": "^2.1.1",
