Still boilerplate. Does it ever end.

--- a/package.json
+++ b/package.json
@@ -1,67 +1,84 @@
 {
-  "name": "thebroomstack",
-  "version": "0.0.1",
-  "description": "The Broom Stack is software to manage a curling club, including a back end and web interface.",
-  "main": "index.js",
-  "dependencies": {
-    "@types/handlebars": "^3.0.27",
-    "@types/jsonwebtoken": "^5.7.26-alpha",
-    "@types/koa-bodyparser": "^3.0.16-alpha",
-    "@types/koa-router": "^7.0.16-alpha",
-    "@types/lodash": "^4.0.25-alpha",
-    "@types/mssql": "^3.1.26-alpha",
-    "@types/node": "^4.0.26-alpha",
-    "@types/q": "0.0.25-alpha",
-    "@types/webpack": "^1.12.31",
-    "autoprefixer": "^6.4.0",
-    "awesome-typescript-loader": "^2.1.1",
-    "browserify": "^13.0.0",
-    "css-loader": "^0.23.1",
-    "guid": "0.0.12",
-    "handlebars": "^4.0.5",
-    "jsdom": "^8.1.0",
-    "jsonwebtoken": "^6.2.0",
-    "koa": "^2.0.0-alpha.3",
-    "koa-bodyparser": "^3.0.0",
-    "koa-router": "^7.0.1",
-    "lodash": "^4.6.1",
-    "mssql": "^3.2.1",
-    "node-rsa": "^0.3.2",
-    "node-sass": "^3.8.0",
-    "postcss-loader": "^0.9.1",
-    "q": "^1.4.1",
-    "request": "^2.69.0",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^0.8.2"
-  },
-  "scripts": {
-    "test": "mocha",
-    "build": "tsc -p ./src/server",
-    "prebuild": "npm run clean",
-    "postbuild": "npm run pack",
-    "clean": "rm -rf ./build/*",
-    "pack": "webpack",
-    "start": "nodemon ./build/release/server/app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/trevorsg/thebroomstack.git"
-  },
-  "keywords": [
-    "curling"
-  ],
-  "author": "Trevor Gau",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/trevorsg/thebroomstack/issues"
-  },
-  "homepage": "https://github.com/trevorsg/thebroomstack#readme",
-  "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "mocha": "^2.5.3",
-    "typescript": "^2.0.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  }
+	"name": "thebroomstack",
+	"version": "0.0.1",
+	"description": "The Broom Stack is software to manage a curling club, including a back end and web interface.",
+	"main": "index.js",
+	"dependencies": {
+		"@types/cookies": "^0.5.30",
+		"@types/handlebars": "^4.0.31",
+		"@types/jsonwebtoken": "^7.1.33",
+		"@types/koa-bodyparser": "^3.0.16-alpha",
+		"@types/koa-router": "^7.0.16-alpha",
+		"@types/lodash": "^4.0.25-alpha",
+		"@types/material-ui": "^0.15.37",
+		"@types/mssql": "^3.1.26-alpha",
+		"@types/node": "^6.0.45",
+		"@types/q": "0.0.32",
+		"@types/react": "^0.14.30",
+		"@types/react-dom": "^0.14.14",
+		"@types/webpack": "^1.12.31",
+		"autoprefixer": "^6.4.0",
+		"awesome-typescript-loader": "^2.2.1",
+		"browserify": "^13.0.0",
+		"css-loader": "^0.25.0",
+		"file-loader": "^0.9.0",
+		"guid": "0.0.12",
+		"handlebars": "^4.0.5",
+		"if-env": "^1.0.0",
+		"immutable": "^3.8.1",
+		"json-loader": "^0.5.4",
+		"jsonwebtoken": "^7.1.9",
+		"koa": "^2.0.0",
+		"koa-bodyparser": "^3.0.0",
+		"koa-router": "^7.0.1",
+		"lodash": "^4.6.1",
+		"material-ui": "^0.16.1",
+		"mssql": "^3.2.1",
+		"node-rsa": "^0.4.2",
+		"node-sass": "^3.8.0",
+		"postcss-loader": "^1.0.0",
+		"q": "^1.4.1",
+		"react": "^15.3.0",
+		"react-dom": "^15.3.0",
+		"redux": "^3.5.2",
+		"sass-loader": "^4.0.0",
+		"style-loader": "^0.13.1",
+		"ts-loader": "^0.9.5"
+	},
+	"scripts": {
+		"build": "tsc -p ./src/server",
+		"clean": "rm -rf ./build/*",
+		"dev": "cmd /c tsc -w -p ./src/server && cmd /c nodemon ./build/release/server/app.js && cmd /c webpack-dev-server --hot --inline --content-base ./build/release/client/public",
+		"hot": "webpack-dev-server --hot --inline --content-base ./build/release/client/public",
+		"mon": "nodemon ./build/release/server/app.js",
+		"pack": "webpack",
+		"postbuild": "npm run pack",
+		"prebuild": "npm run clean",
+		"predev": "npm run build",
+		"test": "mocha",
+		"watch": "tsc -w -p ./src/server"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/trevorsg/thebroomstack.git"
+	},
+	"keywords": [
+		"curling"
+	],
+	"author": "Trevor Gau",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/trevorsg/thebroomstack/issues"
+	},
+	"homepage": "https://github.com/trevorsg/thebroomstack#readme",
+	"devDependencies": {
+		"autoprefixer": "^6.4.0",
+		"google-closure-compiler": "^20160911.0.0",
+		"koa-webpack-middleware": "^1.0.1",
+		"mocha": "^3.1.2",
+		"typescript": "^2.0.3",
+		"webpack": "2.1.0-beta.25",
+		"webpack-closure-compiler": "^2.1.1",
+		"webpack-dev-server": "^1.14.1"
+	}
 }
