--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -1,20 +1,28 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"noImplicitAny": true,
-		"removeComments": true,
-		"outDir": "../../build/release/client",
-		"sourceMap": true,
-		"target": "es5",
 		"forceConsistentCasingInFileNames": true,
+		"jsx": "react",
+		"lib": ["es2015", "dom"],
+		"module": "commonjs",
 		"noFallthroughCasesInSwitch": true,
+		"noImplicitAny": true,
 		"noImplicitReturns": true,
+		"outDir": "../../build/release/client",
 		"pretty": true,
+		"removeComments": true,
+		"sourceMap": true,
 		"strictNullChecks": true,
-		"typeRoots": ["../types"]
+		"target": "es5",
+		"typeRoots": [
+			"../types/client",
+			"../types/shared",
+			"../../node_modules/@types"
+		],
+		"types": [
+			"webpack-env"
+		]
 	},
 	"files": [
-		"app.ts",
-		"../types/webpack-env/index.d.ts" /* TEMPORARY UNTIL #203 is FIXED */
+		"app.tsx"
 	]
 }
