--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -10,12 +10,15 @@
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitReturns": true,
 		"pretty": true,
-		"strictNullChecks": true
+		"strictNullChecks": true,
+		"typeRoots": [
+			"../types/server",
+			"../types/shared",
+			"../../node_modules/@types"
+		]
 	},
-	"files": [
+	"include": [
 		"app.ts",
-		"controller/PersonController.ts",
-		"controller/HomeController.ts",
-		"controller/StaticController.ts"
+		"controller/**/*Controller.ts"
 	]
 }
