Dev loop is ready using Bash on Windows (or Bash on anything I guess). Run ./dev.sh to get started and navigate to localhost:3000/home/test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
 		"build/": true
 	},
 	"editor.detectIndentation": false,
-	"editor.insertSpaces": false
+	"editor.insertSpaces": false,
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
