--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/q": "0.0.32",
     "@types/react": "^0.14.30",
     "@types/react-dom": "^0.14.14",
+    "@types/react-router": "^2.0.41",
     "@types/webpack": "^1.12.31",
     "autoprefixer": "^6.4.0",
     "browserify": "^13.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "glob": "^7.1.1",
     "guid": "0.0.12",
     "handlebars": "^4.0.5",
     "if-env": "^1.0.0",
@@ -39,13 +41,15 @@
     "q": "^1.4.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.5.2",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.9.5"
   },
   "scripts": {
-    "build": "tsc -p ./src/server",
+    "build": "webpack --config webpack.server.config.js --colors",
     "clean": "rm -rf ./build/*",
     "hot": "webpack-dev-server --hot --inline --content-base ./build/release/client/public",
     "mon": "nodemon ./build/release/server/app.js",
@@ -55,7 +59,7 @@
     "predev": "npm run build",
     "start": "node ./build/release/server/app.js",
     "test": "mocha",
-    "watch": "tsc -w -p ./src/server"
+    "watch": "webpack --config webpack.server.config.js --colors --watch"
   },
   "repository": {
     "type": "git",
