--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,16 +1,17 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"noImplicitAny": true,
-		"removeComments": true,
-		"outDir": "../../build/release/server",
-		"sourceMap": true,
-		"target": "es6",
 		"forceConsistentCasingInFileNames": true,
+		"jsx": "react",
+		"module": "commonjs",
 		"noFallthroughCasesInSwitch": true,
+		"noImplicitAny": true,
 		"noImplicitReturns": true,
+		"outDir": "../../build/release",
 		"pretty": true,
+		"removeComments": true,
+		"sourceMap": true,
 		"strictNullChecks": true,
+		"target": "es6",
 		"typeRoots": [
 			"../types/server",
 			"../types/shared",
