--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/trianglecurling/thebroomstack#readme",
   "dependencies": {
+    "@fluentui/react": "^8.20.0",
     "@reach/router": "^1.3.4",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
@@ -33,6 +34,7 @@
     "point-of-view": "^4.15.0",
     "react": "^17.0.2",
     "react-dom": "^16.14.0",
+    "sanitize.css": "^12.0.1",
     "sequelize": "^6.6.2",
     "sqlite3": "^5.0.2",
     "type-fest": "^0.13.1",
@@ -44,10 +46,13 @@
     "@types/connect": "^3.4.34",
     "@types/ejs": "^3.0.6",
     "@types/node": "^15.12.2",
+    "@types/reach__router": "^1.3.8",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/webpack-dev-middleware": "^5.0.0",
     "@types/webpack-hot-middleware": "^2.25.4",
+    "css-loader": "^5.2.6",
+    "mini-css-extract-plugin": "^1.6.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "react-refresh": "^0.9.0",
