--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/trianglecurling/thebroomstack#readme",
   "dependencies": {
+    "@deepkit/orm": "^1.0.1-alpha.33",
+    "@deepkit/orm-browser": "^1.0.1-alpha.32",
+    "@deepkit/sqlite": "^1.0.1-alpha.33",
     "@fluentui/react": "^8.20.0",
     "@reach/router": "^1.3.4",
     "dotenv": "^10.0.0",
@@ -31,12 +34,14 @@
     "fastify-plugin": "^3.0.0",
     "fastify-static": "^4.2.2",
     "fastify-webpack-hmr": "^3.0.0",
+    "node-gyp": "^8.1.0",
     "point-of-view": "^4.15.0",
     "react": "^17.0.2",
     "react-dom": "^16.14.0",
     "sanitize.css": "^12.0.1",
     "sequelize": "^6.6.2",
     "sqlite3": "^5.0.2",
+    "turbo-net": "^1.4.0",
     "type-fest": "^0.13.1",
     "webpack-dev-middleware": "^3.7.3",
     "webpack-hot-middleware": "^2.25.0"
@@ -54,6 +59,7 @@
     "css-loader": "^5.2.6",
     "mini-css-extract-plugin": "^1.6.0",
     "nodemon": "^2.0.7",
+    "npm-force-resolutions": "^0.0.10",
     "npm-run-all": "^4.1.5",
     "react-refresh": "^0.9.0",
     "react-refresh-typescript": "^2.0.1",
@@ -63,5 +69,8 @@
     "typescript": "^4.3.2",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2"
+  },
+  "resolutions": {
+    "node-gyp": "8.1.0"
   }
 }
