--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 		// "composite": true,                           /* Enable project compilation */
 		// "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
 		// "removeComments": true,                      /* Do not emit comments to output. */
-		// "noEmit": true,                              /* Do not emit outputs. */
+		"noEmit": true /* Do not emit outputs. */,
 		// "importHelpers": true,                       /* Import emit helpers from 'tslib'. */
 		// "downlevelIteration": true,                  /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
 		// "isolatedModules": true,                     /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
@@ -70,12 +70,12 @@
 		// "inlineSources": true,                       /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
 
 		/* Experimental Options */
-		// "experimentalDecorators": true,              /* Enables experimental support for ES7 decorators. */
+		"experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
 		// "emitDecoratorMetadata": true,               /* Enables experimental support for emitting type metadata for decorators. */
 
 		/* Advanced Options */
 		"skipLibCheck": true /* Skip type checking of declaration files. */,
 		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
 	},
-	"include": ["./src/index.ts"]
+	"include": ["./src/index.ts", "./src/dataModel/orm-browser.ts"]
 }
