--- a/package.json
+++ b/package.json
@@ -1,76 +1,78 @@
 {
-  "name": "thebroomstack",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "scripts": {
-    "dev": "nodemon src/index.ts",
-    "build": "run-p build:*",
-    "build:client": "webpack --config ./src/plugins/page/client/webpack.config.js",
-    "build:server": "tsc -p .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/trianglecurling/thebroomstack.git"
-  },
-  "author": "Trevor Gau",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/trianglecurling/thebroomstack/issues"
-  },
-  "homepage": "https://github.com/trianglecurling/thebroomstack#readme",
-  "dependencies": {
-    "@deepkit/orm": "^1.0.1-alpha.33",
-    "@deepkit/orm-browser": "^1.0.1-alpha.32",
-    "@deepkit/sqlite": "^1.0.1-alpha.33",
-    "@fluentui/react": "^8.20.0",
-    "@reach/router": "^1.3.4",
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
-    "fastify": "^3.17.0",
-    "fastify-express": "^0.3.2",
-    "fastify-plugin": "^3.0.0",
-    "fastify-static": "^4.2.2",
-    "fastify-webpack-hmr": "^3.0.0",
-    "node-gyp": "^8.1.0",
-    "point-of-view": "^4.15.0",
-    "react": "^17.0.2",
-    "react-dom": "^16.14.0",
-    "sanitize.css": "^12.0.1",
-    "sequelize": "^6.6.2",
-    "sqlite3": "^5.0.2",
-    "turbo-net": "^1.4.0",
-    "type-fest": "^0.13.1",
-    "webpack-dev-middleware": "^3.7.3",
-    "webpack-hot-middleware": "^2.25.0"
-  },
-  "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@types/connect": "^3.4.34",
-    "@types/ejs": "^3.0.6",
-    "@types/node": "^15.12.2",
-    "@types/reach__router": "^1.3.8",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "@types/webpack-dev-middleware": "^5.0.0",
-    "@types/webpack-hot-middleware": "^2.25.4",
-    "css-loader": "^5.2.6",
-    "mini-css-extract-plugin": "^1.6.0",
-    "nodemon": "^2.0.7",
-    "npm-force-resolutions": "^0.0.10",
-    "npm-run-all": "^4.1.5",
-    "react-refresh": "^0.9.0",
-    "react-refresh-typescript": "^2.0.1",
-    "sequelize-fastify": "^1.0.7",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2",
-    "webpack": "^5.39.1",
-    "webpack-cli": "^4.7.2"
-  },
-  "resolutions": {
-    "node-gyp": "8.1.0"
-  }
+	"name": "thebroomstack",
+	"version": "1.0.0",
+	"description": "",
+	"main": "dist/index.js",
+	"scripts": {
+		"dev": "run-p dev:*",
+		"dev:app": "nodemon src/index.ts",
+		"dev:orm": "deepkit-orm-browser src/dataModel/orm-browser.ts",
+		"build": "run-p build:*",
+		"build:client": "webpack --config ./src/plugins/page/client/webpack.config.js",
+		"build:server": "tsc -p .",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/trianglecurling/thebroomstack.git"
+	},
+	"author": "Trevor Gau",
+	"license": "ISC",
+	"type": "commonjs",
+	"bugs": {
+		"url": "https://github.com/trianglecurling/thebroomstack/issues"
+	},
+	"homepage": "https://github.com/trianglecurling/thebroomstack#readme",
+	"dependencies": {
+		"@deepkit/orm": "^1.0.1-alpha.35",
+		"@deepkit/orm-browser": "^1.0.1-alpha.35",
+		"@deepkit/sqlite": "^1.0.1-alpha.35",
+		"@fluentui/react": "^8.20.0",
+		"@reach/router": "^1.3.4",
+		"dotenv": "^10.0.0",
+		"ejs": "^3.1.6",
+		"fastify": "^3.17.0",
+		"fastify-express": "^0.3.2",
+		"fastify-plugin": "^3.0.0",
+		"fastify-static": "^4.2.2",
+		"fastify-webpack-hmr": "^3.0.0",
+		"node-gyp": "^8.1.0",
+		"point-of-view": "^4.15.0",
+		"react": "^17.0.2",
+		"react-dom": "^16.14.0",
+		"sanitize.css": "^12.0.1",
+		"sequelize": "^6.6.2",
+		"sqlite3": "^5.0.2",
+		"turbo-net": "^1.4.0",
+		"type-fest": "^0.13.1",
+		"webpack-dev-middleware": "^3.7.3",
+		"webpack-hot-middleware": "^2.25.0"
+	},
+	"devDependencies": {
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+		"@types/connect": "^3.4.34",
+		"@types/ejs": "^3.0.6",
+		"@types/node": "^15.12.2",
+		"@types/reach__router": "^1.3.8",
+		"@types/react": "^17.0.11",
+		"@types/react-dom": "^17.0.8",
+		"@types/webpack-dev-middleware": "^5.0.0",
+		"@types/webpack-hot-middleware": "^2.25.4",
+		"css-loader": "^5.2.6",
+		"mini-css-extract-plugin": "^1.6.0",
+		"nodemon": "^2.0.7",
+		"npm-force-resolutions": "^0.0.10",
+		"npm-run-all": "^4.1.5",
+		"react-refresh": "^0.9.0",
+		"react-refresh-typescript": "^2.0.1",
+		"sequelize-fastify": "^1.0.7",
+		"ts-loader": "^9.2.3",
+		"ts-node": "^10.0.0",
+		"typescript": "^4.3.2",
+		"webpack": "^5.39.1",
+		"webpack-cli": "^4.7.2"
+	},
+	"resolutions": {
+		"node-gyp": "8.1.0"
+	}
 }
