--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,7 @@
 		// "incremental": true,                         /* Enable incremental compilation */
 		"target": "es2019" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
 		"module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
-		"lib": [
-			"ES2019"
-		] /* Specify library files to be included in the compilation. */,
+		"lib": ["ES2019"] /* Specify library files to be included in the compilation. */,
 		// "allowJs": true,                             /* Allow javascript files to be compiled. */
 		// "checkJs": true,                             /* Report errors in .js files. */
 		// "jsx": "preserve",                           /* Specify JSX code generation: 'preserve', 'react-native', 'react', 'react-jsx' or 'react-jsxdev'. */
@@ -49,15 +47,8 @@
 		// "baseUrl": "./",                             /* Base directory to resolve non-absolute module names. */
 		// "paths": {},                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
 		// "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
-		"typeRoots": [
-			"node_modules/@types",
-			"@types"
-		] /* List of folders to include type definitions from. */,
-		"types": [
-			"sequelize-fastify",
-			"app",
-			"node"
-		] /* Type declaration files to be included in compilation. */,
+		"typeRoots": ["node_modules/@types", "@types"] /* List of folders to include type definitions from. */,
+		"types": ["sequelize-fastify", "app", "node"] /* Type declaration files to be included in compilation. */,
 		// "allowSyntheticDefaultImports": true,        /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
 		"esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
 		// "preserveSymlinks": true,                    /* Do not resolve the real path of symlinks. */
@@ -71,7 +62,7 @@
 
 		/* Experimental Options */
 		"experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
-		"emitDecoratorMetadata": true,               /* Enables experimental support for emitting type metadata for decorators. */
+		"emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
 
 		/* Advanced Options */
 		"skipLibCheck": true /* Skip type checking of declaration files. */,
