--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"dev": "run-p dev:*",
-		"dev:app": "nodemon src/index.ts",
-		"dev:orm": "deepkit-orm-browser src/dataModel/orm-browser.ts",
+		"dev:app": "nodemon",
+        "run": "run-p run:*",
+        "run:server": "ts-node src/app.ts server:listen",
 		"build": "run-p build:*",
 		"build:client": "webpack --config ./src/plugins/page/client/webpack.config.js",
 		"build:server": "tsc -p .",
@@ -24,6 +25,7 @@
 	},
 	"homepage": "https://github.com/trianglecurling/thebroomstack#readme",
 	"dependencies": {
+		"@deepkit/framework": "^1.0.1-alpha.39",
 		"@deepkit/orm": "^1.0.1-alpha.39",
 		"@deepkit/orm-browser": "^1.0.1-alpha.39",
 		"@deepkit/sqlite": "^1.0.1-alpha.39",
@@ -31,13 +33,7 @@
 		"@reach/router": "^1.3.4",
 		"dotenv": "^10.0.0",
 		"ejs": "^3.1.6",
-		"fastify": "^3.17.0",
-		"fastify-express": "^0.3.2",
-		"fastify-plugin": "^3.0.0",
-		"fastify-static": "^4.2.2",
-		"fastify-webpack-hmr": "^3.0.0",
 		"node-gyp": "^8.1.0",
-		"point-of-view": "^4.15.0",
 		"react": "^17.0.2",
 		"react-dom": "^16.14.0",
 		"sanitize.css": "^12.0.1",
