--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,5 +68,5 @@
 		"skipLibCheck": true /* Skip type checking of declaration files. */,
 		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
 	},
-	"include": ["./src/index.ts", "./src/dataModel/orm-browser.ts"]
+	"include": ["./src/app.ts", "./src/dataModel/orm-browser.ts"]
 }
