--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
 	"name": "thebroomstack",
 	"version": "1.0.0",
 	"description": "",
-	"main": "dist/index.js",
+	"main": "dist/app.js",
 	"scripts": {
 		"dev": "run-p dev:*",
-        "dev:app": "run-p dev:app:*",
-        "dev:app:nodemon": "nodemon ./dist/app.js server:listen",
+		"dev:app": "run-p dev:app:*",
+		"dev:app:nodemon": "nodemon ./dist/app.js server:start",
 		"dev:app:typescript": "tsc --watch -p .",
 		"start": "run-p start:*",
-		"start:server": "ts-node src/app.ts server:listen",
+		"start:server": "ts-node src/app.ts server:start",
 		"build": "run-p build:*",
 		"build:client": "webpack --config ./src/plugins/page/client/webpack.config.js",
 		"build:server": "tsc -p .",
@@ -27,15 +27,15 @@
 	},
 	"homepage": "https://github.com/trianglecurling/thebroomstack#readme",
 	"dependencies": {
-		"@deepkit/framework": "^1.0.1-alpha.39",
-		"@deepkit/orm": "^1.0.1-alpha.39",
-		"@deepkit/orm-browser": "^1.0.1-alpha.39",
-		"@deepkit/sqlite": "^1.0.1-alpha.39",
+		"@deepkit/app": "^1.0.1-alpha.41",
+		"@deepkit/framework": "^1.0.1-alpha.41",
+		"@deepkit/orm": "^1.0.1-alpha.41",
+		"@deepkit/orm-browser": "^1.0.1-alpha.41",
+		"@deepkit/sqlite": "^1.0.1-alpha.41",
 		"@fluentui/react": "^8.20.0",
 		"@reach/router": "^1.3.4",
 		"dotenv": "^10.0.0",
 		"ejs": "^3.1.6",
-		"node-gyp": "^8.1.0",
 		"react": "^17.0.2",
 		"react-dom": "^16.14.0",
 		"sanitize.css": "^12.0.1",
@@ -68,8 +68,5 @@
 		"typescript": "^4.3.2",
 		"webpack": "^5.39.1",
 		"webpack-cli": "^4.7.2"
-	},
-	"resolutions": {
-		"node-gyp": "8.1.0"
 	}
 }
