--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
 	"main": "dist/app.js",
 	"scripts": {
 		"dev": "run-p dev:*",
-		"dev:app": "run-p dev:app:*",
-		"dev:app:nodemon": "nodemon ./dist/app.js server:start",
-		"dev:app:typescript": "tsc --watch -p .",
+		"dev:app": "ts-node-dev src/app.ts server:start",
+		"dev:client": "run-p dev:client:*",
+		"dev:client:webpack": "webpack --config ./src/client/webpack.config.js --watch",
 		"start": "run-p start:*",
 		"start:server": "ts-node src/app.ts server:start",
 		"build": "run-p build:*",
-		"build:client": "webpack --config ./src/plugins/page/client/webpack.config.js",
+		"build:client": "webpack --config ./src/client/webpack.config.js",
 		"build:server": "tsc -p .",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -27,15 +27,17 @@
 	},
 	"homepage": "https://github.com/trianglecurling/thebroomstack#readme",
 	"dependencies": {
-		"@deepkit/app": "^1.0.1-alpha.41",
-		"@deepkit/framework": "^1.0.1-alpha.41",
-		"@deepkit/orm": "^1.0.1-alpha.41",
-		"@deepkit/orm-browser": "^1.0.1-alpha.41",
-		"@deepkit/sqlite": "^1.0.1-alpha.41",
+		"@deepkit/app": "^1.0.1-alpha.44",
+		"@deepkit/framework": "^1.0.1-alpha.44",
+		"@deepkit/orm": "^1.0.1-alpha.44",
+		"@deepkit/orm-browser": "^1.0.1-alpha.44",
+		"@deepkit/sqlite": "^1.0.1-alpha.44",
 		"@fluentui/react": "^8.20.0",
 		"@reach/router": "^1.3.4",
+		"@types/pluralize": "^0.0.29",
 		"dotenv": "^10.0.0",
 		"ejs": "^3.1.6",
+		"pluralize": "^8.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^16.14.0",
 		"sanitize.css": "^12.0.1",
@@ -65,6 +67,7 @@
 		"react-refresh-typescript": "^2.0.1",
 		"ts-loader": "^9.2.3",
 		"ts-node": "^10.0.0",
+		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.3.2",
 		"webpack": "^5.39.1",
 		"webpack-cli": "^4.7.2"
