--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"pluralize": "^8.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^16.14.0",
+		"react-query": "^3.21.0",
 		"sanitize.css": "^12.0.1",
 		"sequelize": "^6.6.2",
 		"sqlite3": "^5.0.2",
@@ -53,7 +54,7 @@
 		"@types/connect": "^3.4.34",
 		"@types/ejs": "^3.0.6",
 		"@types/node": "^15.12.2",
-		"@types/reach__router": "^1.3.8",
+		"@types/reach__router": "^1.3.9",
 		"@types/react": "^17.0.11",
 		"@types/react-dom": "^17.0.8",
 		"@types/webpack-dev-middleware": "^5.0.0",
