--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
 	},
 	"homepage": "https://github.com/trianglecurling/thebroomstack#readme",
 	"dependencies": {
-		"@deepkit/app": "^1.0.1-alpha.44",
-		"@deepkit/framework": "^1.0.1-alpha.44",
-		"@deepkit/orm": "^1.0.1-alpha.44",
-		"@deepkit/orm-browser": "^1.0.1-alpha.44",
-		"@deepkit/sqlite": "^1.0.1-alpha.44",
+		"@deepkit/app": "^1.0.1-alpha.71",
+		"@deepkit/framework": "^1.0.1-alpha.71",
+		"@deepkit/orm": "^1.0.1-alpha.71",
+		"@deepkit/orm-browser": "^1.0.1-alpha.71",
+		"@deepkit/sqlite": "^1.0.1-alpha.71",
 		"@fluentui/react": "^8.20.0",
 		"@reach/router": "^1.3.4",
 		"@types/pluralize": "^0.0.29",
@@ -50,6 +50,7 @@
 		"webpack-hot-middleware": "^2.25.0"
 	},
 	"devDependencies": {
+		"@deepkit/type-compiler": "^1.0.1-alpha.71",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
 		"@types/connect": "^3.4.34",
 		"@types/ejs": "^3.0.6",
